--- a/extensions.json
+++ b/extensions.json
@@ -174,7 +174,7 @@
             "author": "BIM Coder",
             "author_profile": "https://bimcoder.net/",
             "url": "https://github.com/premiere-engenharia/Plugins.git",
-            "website": "https://www.youtube.com/@_bimcoder",
+            "website": "",
             "image": "",
             "dependencies": []
         }
